rabbit added; yaws config added into config; event parameter on yaws page added; web socket processing moved to separate module; unnecessary handle_calls removed in mcom_server.

--- a/priv/mcom_server.config
+++ b/priv/mcom_server.config
@@ -2,9 +2,55 @@
     {mcom_server, [
         {log, "/var/log/erpher/mc"},
         {debug, [
-                {msg, 3},
-                {run, 2}
+                {child, 4},
+                {run, 4}
             ]
-        }
-    ]}
+        },
+        {child_config, [
+            {debug, [
+                    {run, 4}
+                ]
+            }
+        ]},
+        {yaws_config, [
+            {id, "test_yaws"},
+            {docroot, "/var/www/01/www4"},
+            {sconf, [
+                {docroot0, "/var/www/01/www"},
+                {port, 8184},
+                {listen, {0,0,0,0}},
+                {ebin_dir, ["/var/www/01/ebin"]},
+                %{appmods, [{"/", my_appmod}]},
+                {servername, "localhost"},
+                {ssl0, [
+                    % {certfile, "/var/www/01/conf/ssl/localhost-cert.pem"},
+                    % {keyfile, "/var/www/01/conf/ssl/localhost-key.pem"}
+                    {certfile, "/var/www/01/conf/ssl/192.168.9.138.crt"},
+                    {keyfile, "/var/www/01/conf/ssl/192.168.9.138.key"}
+                ]},
+                {flags, [
+                    {dir_listings, true}
+                ]}
+            ]},
+            {gconf, [
+                %{yaws_dir, "/usr/lib/yaws"},
+                {yaws_dir, "/home/user1/util/erlang/http/yaws-1.91"},
+                {logdir, "/var/log/erpher/yaws"},
+                {ebin_dir, ["/usr/lib/yaws/custom/ebin"]},
+                {include_dir, ["/usr/lib/yaws/custom/include"]},
+                {max_connections, nolimit},
+                {trace, false},
+                {copy_error_log, true},
+                {log_wrap_size, 1000000},
+                {log_resolve_hostname, false},
+                {fail_on_bind_err, true},
+                {auth_log, true},
+                {id, mcom_yaws},
+                {pick_first_virthost_on_nomatch, true},
+                {use_fdsrv, false},
+                {subconfigdir, "/var/www/01/conf"}
+            ]} % gconf
+        ]} % yaws config
+    ]} % mcom server
 ].
+
