rabbit init added; rabbit params added into config; preparations moved to separate sub.

--- a/priv/mcom_server.config
+++ b/priv/mcom_server.config
@@ -12,6 +12,17 @@
                 ]
             }
         ]},
+        {rabbit, [
+                {port, 5672},
+                {host, '127.0.0.1'},
+                {user, <<"guest">>},
+                {password, <<"guest">>},
+                {vhost , <<"/">>},
+                {exchange , <<"negacom">>},
+                {exchange_type , <<"topic">>},
+                {queue , <<"mc_queue_3">>},
+                {routing_key , <<"test_event">>}
+        ]},
         {yaws_config, [
             {id, "test_yaws"},
             {docroot, "/var/www/01/www4"},
