fix in init for start_time; fix in prepare_rabbit for consumer setup; debug print.

--- a/priv/mcom_server.config
+++ b/priv/mcom_server.config
@@ -3,11 +3,12 @@
         {log, "/var/log/erpher/mc"},
         {debug, [
                 {child, 4},
-                {run, 4}
+                {run, 6}
             ]
         },
         {child_config, [
             {debug, [
+                    {msg, 6},
                     {run, 4}
                 ]
             }
