debug tags added; handler for amqp messages added.

--- a/priv/mcom_server.config
+++ b/priv/mcom_server.config
@@ -8,7 +8,9 @@
         },
         {child_config, [
             {debug, [
-                    {msg, 6},
+                    {rb_msg, 6},
+                    {web_msg, 6},
+                    {ws, 6},
                     {run, 4}
                 ]
             }
