--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -1,6 +1,6 @@
 [
-    {mcom_server, [
-        {log, "/var/log/erpher/mc"},
+    {ecomet_server, [
+        {log, "/var/log/erpher/ec"},
         {debug, [
                 {child, 4},
                 {run, 6}
@@ -23,7 +23,7 @@
                 {vhost , <<"/">>},
                 {exchange , <<"negacom">>},
                 {exchange_type , <<"topic">>},
-                {queue , <<"mc_queue_3">>},
+                {queue , <<"ec_queue_3">>},
                 {routing_key , <<"test_event">>}
         ]},
         {yaws_config, [
@@ -59,12 +59,12 @@
                 {log_resolve_hostname, false},
                 {fail_on_bind_err, true},
                 {auth_log, true},
-                {id, mcom_yaws},
+                {id, ecomet_yaws},
                 {pick_first_virthost_on_nomatch, true},
                 {use_fdsrv, false},
                 {subconfigdir, "/var/www/01/conf"}
             ]} % gconf
         ]} % yaws config
-    ]} % mcom server
+    ]} % ecomet server
 ].
 
