--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -8,10 +8,11 @@
         },
         {child_config, [
             {debug, [
+                    {stat, 0},
                     {rb_msg, 0},
                     {web_msg, 0},
                     {ws, 0},
-                    {run, 2}
+                    {run, 0}
                 ]
             }
         ]},
