adding long polling

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -8,11 +8,12 @@
         },
         {child_config, [
             {debug, [
-                    {stat, 0},
-                    {rb_msg, 0},
-                    {web_msg, 0},
-                    {ws, 0},
-                    {run, 0}
+                    {stat, 6},
+                    {rb_msg, 6}, % rabbit messages
+                    {web_msg, 6}, % web messages
+                    {ws, 6}, % web socket
+                    {lp, 6}, % long poll
+                    {run, 6}
                 ]
             }
         ]},
