queue for incoming messages added; list for clients added; external request with id goes through ecomet_server to ecomet_conn_server which serves the connection.

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -7,13 +7,15 @@
             ]
         },
         {child_config, [
+            {qmax_dur, 600200100}, % microseconds
+            {qmax_len, 500},
             {debug, [
                     {stat, 6},
                     {rb_msg, 6}, % rabbit messages
                     {web_msg, 6}, % web messages
                     {ws, 6}, % web socket
                     {lp, 6}, % long poll
-                    {run, 6}
+                    {run, 7}
                 ]
             }
         ]},
