idle timer added to shutdown idle connections

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -7,6 +7,7 @@
             ]
         },
         {child_config, [
+            {idle_timeout, 81}, % seconds
             {qmax_dur, 600200100}, % microseconds
             {qmax_len, 500},
             {debug, [
