delete old long poll requests

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -7,7 +7,8 @@
             ]
         },
         {child_config, [
-            {idle_timeout, 81}, % seconds
+            {idle_timeout, 81}, % seconds. Idle time before exit
+            {lp_request_timeout, 300}, % seconds. Time to delete old lp requests
             {qmax_dur, 600200100}, % microseconds
             {qmax_len, 500},
             {debug, [
