terminate yaws long poll processes on timer

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -1,6 +1,7 @@
 [
     {ecomet_server, [
         {log, "/var/log/erpher/ec"},
+        {yaws_lp_request_timeout, 300}, % seconds. Time to terminate yaws long poll processes
         {debug, [
                 {child, 4},
                 {run, 6}
