added periodical terminating yaws long poll processes and periodical cleaning old long poll processes from children list

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -1,7 +1,9 @@
 [
     {ecomet_server, [
         {log, "/var/log/erpher/ec"},
-        {yaws_lp_request_timeout, 300}, % seconds. Time to terminate yaws long poll processes
+        {lp_check_interval, 1002}, % milliseconds
+        {lp_yaws_request_timeout, 301}, % seconds. Time to terminate yaws long poll processes
+        {lp_yaws_check_interval, 1001}, % milliseconds
         {debug, [
                 {child, 4},
                 {run, 6}
