hrl files reorganized; adding integration with socket-io-erlang

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -10,7 +10,7 @@
             ]
         },
         {child_config, [
-            {idle_timeout, 81}, % seconds. Idle time before exit
+            {idle_timeout, 681}, % seconds. Idle (no any data) time before exit
             {lp_request_timeout, 300}, % seconds. Time to delete old lp requests
             {qmax_dur, 600200100}, % microseconds
             {qmax_len, 500},
@@ -20,7 +20,7 @@
                     {web_msg, 6}, % web messages
                     {ws, 6}, % web socket
                     {lp, 6}, % long poll
-                    {run, 7}
+                    {run, 6}
                 ]
             }
         ]},
