socket-io works (it still should be started by external function - d2:main)

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -14,6 +14,8 @@
             {lp_request_timeout, 300}, % seconds. Time to delete old lp requests
             {qmax_dur, 600200100}, % microseconds
             {qmax_len, 500},
+            {http_connect_timeout, 15000},
+            {http_timeout, 60000},
             {debug, [
                     {stat, 6},
                     {rb_msg, 6}, % rabbit messages
@@ -31,6 +33,7 @@
                 {password, <<"guest">>},
                 {vhost , <<"/">>},
                 {exchange , <<"negacom">>},
+                {exchange_base, <<"ecomet_">>},
                 {exchange_type , <<"topic">>},
                 {queue , <<"ec_queue_3">>},
                 {routing_key , <<"test_event">>}
