start socket-io on startup; ecomet_socketio_handler.erl added as first version of a handler; ecomet_rb.erl reorganized.

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -1,5 +1,9 @@
 [
     {ecomet_server, [
+        {socketio_config, [
+                {port, 7878}
+                ]
+    	},
         {log, "/var/log/erpher/ec"},
         {lp_check_interval, 1002}, % milliseconds
         {lp_yaws_request_timeout, 301}, % seconds. Time to terminate yaws long poll processes
