--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -1,5 +1,12 @@
 [
     {ecomet_server, [
+        {sockjs_config, [
+                % ignored path items before sid. Include tag and server parts
+                {sid_ignore_tokens, 2},
+                {tag, ecomet},
+                {port, 8085}
+                ]
+        },
         {socketio_config, [
                 {port, 7878}
                 ]
@@ -10,11 +17,13 @@
         {lp_yaws_check_interval, 1001}, % milliseconds
         {debug, [
                 {child, 4},
-                {run, 6}
+                {http, 4},
+                {run, 4}
             ]
         },
         {child_config, [
-            {idle_timeout, 681}, % seconds. Idle (no any data) time before exit
+            {user_data_as_auth_host, true},
+            {idle_timeout0, 681}, % seconds. Idle (no any data) time before exit
             {sio_auth_recheck_interval, 61}, % seconds
             {lp_request_timeout, 300}, % seconds. Time to delete old lp requests
             {qmax_dur, 600200100}, % microseconds
@@ -27,6 +36,7 @@
                     {web_msg, 6}, % web messages
                     {ws, 6}, % web socket
                     {lp, 6}, % long poll
+                    {http, 4}, % http request, response
                     {run, 6}
                 ]
             }
@@ -43,7 +53,7 @@
                 {queue , <<"ec_queue_3">>},
                 {routing_key , <<"test_event">>}
         ]},
-        {yaws_config, [
+        {yaws_config0, [
             {id, "test_yaws"},
             {docroot, "/var/www/01/www4"},
             {sconf, [
