--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -1,5 +1,6 @@
 [
     {ecomet_server, [
+        {log_stat_interval, 120},
         {sockjs_config, [
                 % ignored path items before sid. Include tag and server parts
                 {sid_ignore_tokens, 2},
@@ -10,7 +11,7 @@
         {socketio_config, [
                 {port, 7878}
                 ]
-    	},
+        },
         {log, "/var/log/erpher/ec"},
         {lp_check_interval, 1002}, % milliseconds
         {lp_yaws_request_timeout, 301}, % seconds. Time to terminate yaws long poll processes
