--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -23,6 +23,7 @@
             ]
         },
         {child_config, [
+            {economize, memory}, % memory, cpu
             {user_data_as_auth_host, true},
             {idle_timeout0, 681}, % seconds. Idle (no any data) time before exit
             {sio_auth_recheck_interval, 61}, % seconds
