config sample sync-ed with working config

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -24,6 +24,7 @@
         },
         {child_config, [
             {economize, memory}, % memory, cpu
+            {deep_memory_economize, true}, % call gc
             {user_data_as_auth_host, true},
             {idle_timeout0, 681}, % seconds. Idle (no any data) time before exit
             {sio_auth_recheck_interval, 61}, % seconds
