ignore file changed

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
+*~
 \#*\#
-*.plt
-ebin/
 *.beam
-tags
-TAGS
+doc/html
+ebin/
+*.log
 log/
-*.swp
-*.sublime-*
+*.plt
 .project
 .settings/*
-doc/html
-*~
+*.sublime-*
+*.swp
+tags
+TAGS
