added couple of parameters in sample config for cowboy

--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -5,6 +5,8 @@
                 % ignored path items before sid. Include tag and server parts
                 {sid_ignore_tokens, 2},
                 {tag, ecomet},
+                {max_connections, 2047},
+                {nb_acceptors, 199},
                 {port, 8085}
                 ]
         },
