--- a/priv/ecomet_server.config
+++ b/priv/ecomet_server.config
@@ -25,6 +25,9 @@
             ]
         },
         {child_config, [
+            {jit_log_level, 3},
+            {jit_log_keep_n, 2000},
+            {jit_log_keep_time, 50.1},
             {economize, memory}, % memory, cpu
             {deep_memory_economize, true}, % call gc
             {user_data_as_auth_host, true},
